@@ -1,3 +1,15 @@
+Sun Jan 17 12:01:26 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
+
+	* private.c (_pthread_sem_timedwait): Move from semaphore.c.
+
+	* semaphore.c : Remove redundant #includes.
+	(_pthread_sem_timedwait): Move to private.c.
+	(sem_wait): Add missing abstime arg to pthreadCancelableWait() call.
+
+Fri Jan 15 23:38:05 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
+
+	* condvar.c (cond_timedwait): Remove comment.
+
 Fri Jan 15 15:41:28 1999  Ross Johnson  <rpj@swan.canberra.edu.au>
 
 	* pthread.h: Add new 'abstime' arg to pthreadCancelableWait()
